vm/src/cz/cvut/fit/mirun/lemavm/antlr/LeMaVMParseParser.java
package cz.cvut.fit.mirun.lemavm.antlr;

// $ANTLR 3.0.1 LeMaVMParse.g 2012-11-12 20:10:03

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;

public class LeMaVMParseParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "IntegerNumber", "LongSuffix", "LONGLITERAL", "INTLITERAL", "Exponent", "NonIntegerNumber", "DoubleSuffix", "DOUBLELITERAL", "EscapeSequence", "STRINGLITERAL", "WS", "COMMENT", "LINE_COMMENT", "BOOLEAN", "BREAK", "CASE", "CLASS", "CONTINUE", "DEFAULT", "DO", "DOUBLE", "ELSE", "EXTENDS", "FINAL", "FOR", "IF", "IMPORT", "INT", "NEW", "PACKAGE", "PRIVATE", "PROTECTED", "PUBLIC", "RETURN", "SHORT", "STATIC", "SUPER", "SWITCH", "THIS", "VOID", "WHILE", "TRUE", "FALSE", "NULL", "LPAREN", "RPAREN", "LBRACE", "RBRACE", "LBRACKET", "RBRACKET", "SEMI", "COMMA", "DOT", "EQ", "BANG", "TILDE", "QUES", "COLON", "EQEQ", "AMPAMP", "BARBAR", "PLUSPLUS", "SUBSUB", "PLUS", "SUB", "STAR", "SLASH", "AMP", "BAR", "CARET", "PERCENT", "PLUSEQ", "SUBEQ", "STAREQ", "SLASHEQ", "AMPEQ", "BAREQ", "CARETEQ", "PERCENTEQ", "MONKEYS_AT", "BANGEQ", "GT", "LT", "IdentifierStart", "IdentifierPart", "IDENTIFIER", "SurrogateIdentifer", "Tokens", "LONG", "THROW", "INSTANCEOF", "INTERFACE"
    };
    public static final int PACKAGE=33;
    public static final int LT=86;
    public static final int STAR=69;
    public static final int WHILE=44;
    public static final int CASE=19;
    public static final int NEW=32;
    public static final int DO=23;
    public static final int EOF=-1;
    public static final int BREAK=18;
    public static final int LBRACKET=52;
    public static final int FINAL=27;
    public static final int RPAREN=49;
    public static final int IMPORT=30;
    public static final int SUBSUB=66;
    public static final int NonIntegerNumber=9;
    public static final int STAREQ=77;
    public static final int CARET=73;
    public static final int RETURN=37;
    public static final int THIS=42;
    public static final int DOUBLE=24;
    public static final int MONKEYS_AT=83;
    public static final int BARBAR=64;
    public static final int VOID=43;
    public static final int SUPER=40;
    public static final int EQ=57;
    public static final int AMPAMP=63;
    public static final int COMMENT=15;
    public static final int QUES=60;
    public static final int EQEQ=62;
    public static final int RBRACE=51;
    public static final int LINE_COMMENT=16;
    public static final int PRIVATE=34;
    public static final int STATIC=39;
    public static final int SWITCH=41;
    public static final int NULL=47;
    public static final int ELSE=25;
    public static final int DOUBLELITERAL=11;
    public static final int IdentifierStart=87;
    public static final int INT=31;
    public static final int SLASHEQ=78;
    public static final int INTLITERAL=7;
    public static final int LONGLITERAL=6;
    public static final int LongSuffix=5;
    public static final int WS=14;
    public static final int SurrogateIdentifer=90;
    public static final int GT=85;
    public static final int FALSE=46;
    public static final int EscapeSequence=12;
    public static final int THROW=93;
    public static final int PROTECTED=35;
    public static final int CLASS=20;
    public static final int BAREQ=80;
    public static final int IntegerNumber=4;
    public static final int AMP=71;
    public static final int PLUSPLUS=65;
    public static final int LBRACE=50;
    public static final int SUBEQ=76;
    public static final int FOR=28;
    public static final int Exponent=8;
    public static final int SUB=68;
    public static final int PLUSEQ=75;
    public static final int LPAREN=48;
    public static final int IF=29;
    public static final int BOOLEAN=17;
    public static final int SLASH=70;
    public static final int CONTINUE=21;
    public static final int COMMA=55;
    public static final int AMPEQ=79;
    public static final int IDENTIFIER=89;
    public static final int TILDE=59;
    public static final int BANGEQ=84;
    public static final int PLUS=67;
    public static final int RBRACKET=53;
    public static final int DOT=56;
    public static final int IdentifierPart=88;
    public static final int PERCENT=74;
    public static final int DEFAULT=22;
    public static final int SHORT=38;
    public static final int BANG=58;
    public static final int INSTANCEOF=94;
    public static final int Tokens=91;
    public static final int TRUE=45;
    public static final int SEMI=54;
    public static final int COLON=61;
    public static final int DoubleSuffix=10;
    public static final int PERCENTEQ=82;
    public static final int STRINGLITERAL=13;
    public static final int CARETEQ=81;
    public static final int INTERFACE=95;
    public static final int LONG=92;
    public static final int PUBLIC=36;
    public static final int EXTENDS=26;
    public static final int BAR=72;

        public LeMaVMParseParser(TokenStream input) {
            super(input);
            ruleMemo = new HashMap[246+1];
         }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return tokenNames; }
    public String getGrammarFileName() { return "LeMaVMParse.g"; }


    public static class compilationUnit_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start compilationUnit
    // LeMaVMParse.g:15:1: compilationUnit : ( packageDeclaration )? ( importDeclaration )* ( typeDeclaration )* ;
    public final compilationUnit_return compilationUnit() throws RecognitionException {
        compilationUnit_return retval = new compilationUnit_return();
        retval.start = input.LT(1);
        int compilationUnit_StartIndex = input.index();
        Object root_0 = null;

        packageDeclaration_return packageDeclaration1 = null;

        importDeclaration_return importDeclaration2 = null;

        typeDeclaration_return typeDeclaration3 = null;



        try {
            if ( backtracking>0 && alreadyParsedRule(input, 1) ) { return retval; }
            // LeMaVMParse.g:20:5: ( ( packageDeclaration )? ( importDeclaration )* ( typeDeclaration )* )
            // LeMaVMParse.g:20:9: ( packageDeclaration )? ( importDeclaration )* ( typeDeclaration )*
            {
            root_0 = (Object)adaptor.nil();

            // LeMaVMParse.g:20:9: ( packageDeclaration )?
            int alt1=2;
            int LA1_0 = input.LA(1);

            if ( (LA1_0==PACKAGE) ) {
                alt1=1;
            }
            switch (alt1) {
                case 1 :
                    // LeMaVMParse.g:20:13: packageDeclaration
                    {
                    pushFollow(FOLLOW_packageDeclaration_in_compilationUnit63);
                    packageDeclaration1=packageDeclaration();
                    _fsp--;
                    if (failed) return retval;
                    if ( backtracking==0 ) adaptor.addChild(root_0, packageDeclaration1.getTree());

                    }
                    break;

            }

            // LeMaVMParse.g:22:9: ( importDeclaration )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==IMPORT) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // LeMaVMParse.g:22:10: importDeclaration
            	    {
            	    pushFollow(FOLLOW_importDeclaration_in_compilationUnit85);
            	    importDeclaration2=importDeclaration();
            	    _fsp--;
            	    if (failed) return retval;
            	    if ( backtracking==0 ) adaptor.addChild(root_0, importDeclaration2.getTree());

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);

            // LeMaVMParse.g:24:9: ( typeDeclaration )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==CLASS||LA3_0==FINAL||(LA3_0>=PRIVATE && LA3_0<=PUBLIC)||LA3_0==STATIC||LA3_0==SEMI) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // LeMaVMParse.g:24:10: typeDeclaration
            	    {
            	    pushFollow(FOLLOW_typeDeclaration_in_compilationUnit107);
            	    typeDeclaration3=typeDeclaration();
            	    _fsp--;
            	    if (failed) return retval;
            	    if ( backtracking==0 ) adaptor.addChild(root_0, typeDeclaration3.getTree());

            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

            if ( backtracking==0 ) {
                retval.tree = (Object)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
            if ( backtracking>0 ) { memoize(input, 1, compilationUnit_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end compilationUnit

    public static class packageDeclaration_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start packageDeclaration
    // LeMaVMParse.g:28:1: packageDeclaration : PACKAGE qualifiedName SEMI ;
    public final packageDeclaration_return packageDeclaration() throws RecognitionException {
        packageDeclaration_return retval = new packageDeclaration_return();
        retval.start = input.LT(1);
        int packageDeclaration_StartIndex = input.index();
        Object root_0 = null;

        Token PACKAGE4=null;
        Token SEMI6=null;
        qualifiedName_return qualifiedName5 = null;


        Object PACKAGE4_tree=null;
        Object SEMI6_tree=null;

        try {
            if ( backtracking>0 && alreadyParsedRule(input, 2) ) { return retval; }
            // LeMaVMParse.g:29:5: ( PACKAGE qualifiedName SEMI )
            // LeMaVMParse.g:29:9: PACKAGE qualifiedName SEMI
            {
            root_0 = (Object)adaptor.nil();

            PACKAGE4=(Token)input.LT(1);
            match(input,PACKAGE,FOLLOW_PACKAGE_in_packageDeclaration137); if (failed) return retval;
            if ( backtracking==0 ) {
            PACKAGE4_tree = (Object)adaptor.create(PACKAGE4);
            adaptor.addChild(root_0, PACKAGE4_tree);
            }
            pushFollow(FOLLOW_qualifiedName_in_packageDeclaration139);
            qualifiedName5=qualifiedName();
            _fsp--;
            if (failed) return retval;
            if ( backtracking==0 ) adaptor.addChild(root_0, qualifiedName5.getTree());
            SEMI6=(Token)input.LT(1);
            match(input,SEMI,FOLLOW_SEMI_in_packageDeclaration149); if (failed) return retval;
            if ( backtracking==0 ) {
            SEMI6_tree = (Object)adaptor.create(SEMI6);
            adaptor.addChild(root_0, SEMI6_tree);
            }

            }

            retval.stop = input.LT(-1);

            if ( backtracking==0 ) {
                retval.tree = (Object)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
            if ( backtracking>0 ) { memoize(input, 2, packageDeclaration_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end packageDeclaration

    public static class importDeclaration_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start importDeclaration
    // LeMaVMParse.g:33:1: importDeclaration : IMPORT IDENTIFIER ( DOT IDENTIFIER )+ SEMI ;
    public final importDeclaration_return importDeclaration() throws RecognitionException {
        importDeclaration_return retval = new importDeclaration_return();
        retval.start = input.LT(1);
        int importDeclaration_StartIndex = input.index();
        Object root_0 = null;

        Token IMPORT7=null;
        Token IDENTIFIER8=null;
        Token DOT9=null;
        Token IDENTIFIER10=null;
        Token SEMI11=null;

        Object IMPORT7_tree=null;
        Object IDENTIFIER8_tree=null;
        Object DOT9_tree=null;
        Object IDENTIFIER10_tree=null;
        Object SEMI11_tree=null;

        try {
            if ( backtracking>0 && alreadyParsedRule(input, 3) ) { return retval; }
            // LeMaVMParse.g:34:5: ( IMPORT IDENTIFIER ( DOT IDENTIFIER )+ SEMI )
            // LeMaVMParse.g:34:9: IMPORT IDENTIFIER ( DOT IDENTIFIER )+ SEMI
            {
            root_0 = (Object)adaptor.nil();

            IMPORT7=(Token)input.LT(1);
            match(input,IMPORT,FOLLOW_IMPORT_in_importDeclaration168); if (failed) return retval;
            if ( backtracking==0 ) {
            IMPORT7_tree = (Object)adaptor.create(IMPORT7);
            adaptor.addChild(root_0, IMPORT7_tree);
            }
            IDENTIFIER8=(Token)input.LT(1);
            match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_importDeclaration178); if (failed) return retval;
            if ( backtracking==0 ) {
            IDENTIFIER8_tree = (Object)adaptor.create(IDENTIFIER8);
            adaptor.addChild(root_0, IDENTIFIER8_tree);
            }
            // LeMaVMParse.g:36:9: ( DOT IDENTIFIER )+
            int cnt4=0;
            loop4:
            do {
                int alt4=2;
                int LA4_0 = input.LA(1);

                if ( (LA4_0==DOT) ) {
                    alt4=1;
                }


                switch (alt4) {
            	case 1 :
            	    // LeMaVMParse.g:36:10: DOT IDENTIFIER
            	    {
            	    DOT9=(Token)input.LT(1);
            	    match(input,DOT,FOLLOW_DOT_in_importDeclaration189); if (failed) return retval;
            	    if ( backtracking==0 ) {
            	    DOT9_tree = (Object)adaptor.create(DOT9);
            	    adaptor.addChild(root_0, DOT9_tree);
            	    }
            	    IDENTIFIER10=(Token)input.LT(1);
            	    match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_importDeclaration191); if (failed) return retval;
            	    if ( backtracking==0 ) {
            	    IDENTIFIER10_tree = (Object)adaptor.create(IDENTIFIER10);
            	    adaptor.addChild(root_0, IDENTIFIER10_tree);
            	    }

            	    }
            	    break;

            	default :
            	    if ( cnt4 >= 1 ) break loop4;
            	    if (backtracking>0) {failed=true; return retval;}
                        EarlyExitException eee =
                            new EarlyExitException(4, input);
                        throw eee;
                }
                cnt4++;
            } while (true);

            SEMI11=(Token)input.LT(1);
            match(input,SEMI,FOLLOW_SEMI_in_importDeclaration212); if (failed) return retval;
            if ( backtracking==0 ) {
            SEMI11_tree = (Object)adaptor.create(SEMI11);
            adaptor.addChild(root_0, SEMI11_tree);
            }

            }

            retval.stop = input.LT(-1);

            if ( backtracking==0 ) {
                retval.tree = (Object)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
            if ( backtracking>0 ) { memoize(input, 3, importDeclaration_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end importDeclaration

    public static class qualifiedImportName_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start qualifiedImportName
    // LeMaVMParse.g:41:1: qualifiedImportName : IDENTIFIER ( DOT IDENTIFIER )* ;
    public final qualifiedImportName_return qualifiedImportName() throws RecognitionException {
        qualifiedImportName_return retval = new qualifiedImportName_return();
        retval.start = input.LT(1);
        int qualifiedImportName_StartIndex = input.index();
        Object root_0 = null;

        Token IDENTIFIER12=null;
        Token DOT13=null;
        Token IDENTIFIER14=null;

        Object IDENTIFIER12_tree=null;
        Object DOT13_tree=null;
        Object IDENTIFIER14_tree=null;

        try {
            if ( backtracking>0 && alreadyParsedRule(input, 4) ) { return retval; }
            // LeMaVMParse.g:42:5: ( IDENTIFIER ( DOT IDENTIFIER )* )
            // LeMaVMParse.g:42:9: IDENTIFIER ( DOT IDENTIFIER )*
            {
            root_0 = (Object)adaptor.nil();

            IDENTIFIER12=(Token)input.LT(1);
            match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_qualifiedImportName231); if (failed) return retval;
            if ( backtracking==0 ) {
            IDENTIFIER12_tree = (Object)adaptor.create(IDENTIFIER12);
            adaptor.addChild(root_0, IDENTIFIER12_tree);
            }
            // LeMaVMParse.g:43:9: ( DOT IDENTIFIER )*
            loop5:
            do {
                int alt5=2;
                int LA5_0 = input.LA(1);

                if ( (LA5_0==DOT) ) {
                    alt5=1;
                }


                switch (alt5) {
            	case 1 :
            	    // LeMaVMParse.g:43:10: DOT IDENTIFIER
            	    {
            	    DOT13=(Token)input.LT(1);
            	    match(input,DOT,FOLLOW_DOT_in_qualifiedImportName242); if (failed) return retval;
            	    if ( backtracking==0 ) {
            	    DOT13_tree = (Object)adaptor.create(DOT13);
            	    adaptor.addChild(root_0, DOT13_tree);
            	    }
            	    IDENTIFIER14=(Token)input.LT(1);
            	    match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_qualifiedImportName244); if (failed) return retval;
            	    if ( backtracking==0 ) {
            	    IDENTIFIER14_tree = (Object)adaptor.create(IDENTIFIER14);
            	    adaptor.addChild(root_0, IDENTIFIER14_tree);
            	    }

            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

            if ( backtracking==0 ) {
                retval.tree = (Object)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
            if ( backtracking>0 ) { memoize(input, 4, qualifiedImportName_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end qualifiedImportName

    public static class typeDeclaration_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start typeDeclaration
    // LeMaVMParse.g:47:1: typeDeclaration : ( classDeclaration | SEMI );
    public final typeDeclaration_return typeDeclaration() throws RecognitionException {
        typeDeclaration_return retval = new typeDeclaration_return();
        retval.start = input.LT(1);
        int typeDeclaration_StartIndex = input.index();
        Object root_0 = null;

        Token SEMI16=null;
        classDeclaration_return classDeclaration15 = null;


        Object SEMI16_tree=null;

        try {
            if ( backtracking>0 && alreadyParsedRule(input, 5) ) { return retval; }
            // LeMaVMParse.g:48:5: ( classDeclaration | SEMI )
            int alt6=2;
            int LA6_0 = input.LA(1);

            if ( (LA6_0==CLASS||LA6_0==FINAL||(LA6_0>=PRIVATE && LA6_0<=PUBLIC)||LA6_0==STATIC) ) {
                alt6=1;
            }
            else if ( (LA6_0==SEMI) ) {
                alt6=2;
            }
            else {
                if (backtracking>0) {failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("47:1: typeDeclaration : ( classDeclaration | SEMI );", 6, 0, input);

                throw nvae;
            }
            switch (alt6) {
                case 1 :
                    // LeMaVMParse.g:48:9: classDeclaration
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_classDeclaration_in_typeDeclaration274);
                    classDeclaration15=classDeclaration();
                    _fsp--;
                    if (failed) return retval;
                    if ( backtracking==0 ) adaptor.addChild(root_0, classDeclaration15.getTree());

                    }
                    break;
                case 2 :
                    // LeMaVMParse.g:49:9: SEMI
                    {
                    root_0 = (Object)adaptor.nil();

                    SEMI16=(Token)input.LT(1);
                    match(input,SEMI,FOLLOW_SEMI_in_typeDeclaration284); if (failed) return retval;
                    if ( backtracking==0 ) {
                    SEMI16_tree = (Object)adaptor.create(SEMI16);
                    adaptor.addChild(root_0, SEMI16_tree);
                    }

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            if ( backtracking==0 ) {
                retval.tree = (Object)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
            if ( backtracking>0 ) { memoize(input, 5, typeDeclaration_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end typeDeclaration

    public static class modifiers_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start modifiers
    // LeMaVMParse.g:52:1: modifiers : ( PUBLIC | PROTECTED | PRIVATE | STATIC | FINAL )* ;
    public final modifiers_return modifiers() throws RecognitionException {
        modifiers_return retval = new modifiers_return();
        retval.start = input.LT(1);
        int modifiers_StartIndex = input.index();
        Object root_0 = null;

        Token set17=null;

        Object set17_tree=null;

        try {
            if ( backtracking>0 && alreadyParsedRule(input, 6) ) { return retval; }
            // LeMaVMParse.g:53:5: ( ( PUBLIC | PROTECTED | PRIVATE | STATIC | FINAL )* )
            // LeMaVMParse.g:54:5: ( PUBLIC | PROTECTED | PRIVATE | STATIC | FINAL )*
            {
            root_0 = (Object)adaptor.nil();

            // LeMaVMParse.g:54:5: ( PUBLIC | PROTECTED | PRIVATE | STATIC | FINAL )*
            loop7:
            do {
                int alt7=2;
                int LA7_0 = input.LA(1);

                if ( (LA7_0==FINAL||(LA7_0>=PRIVATE && LA7_0<=PUBLIC)||LA7_0==STATIC) ) {
                    alt7=1;
                }


                switch (alt7) {
            	case 1 :
            	    // LeMaVMParse.g:
            	    {
            	    set17=(Token)input.LT(1);
            	    if ( input.LA(1)==FINAL||(input.LA(1)>=PRIVATE && input.LA(1)<=PUBLIC)||input.LA(1)==STATIC ) {
            	        input.consume();
            	        if ( backtracking==0 ) adaptor.addChild(root_0, adaptor.create(set17));
            	        errorRecovery=false;failed=false;
            	    }
            	    else {
            	        if (backtracking>0) {failed=true; return retval;}
            	        MismatchedSetException mse =
            	            new MismatchedSetException(null,input);
            	        recoverFromMismatchedSet(input,mse,FOLLOW_set_in_modifiers305);    throw mse;
            	    }


            	    }
            	    break;

            	default :
            	    break loop7;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);
